<resources>
    <string name="app_name">Music Journal</string>
    <string name="singer_name">Singer Name</string>
    <string name="example_guns_n_roses">example: Guns N\' Roses</string>
    <string name="location">Location</string>
    <string name="example_los_angeles_california">example: Los Angeles, California</string>
    <string name="genre">Genre</string>
    <string name="rock">Rock</string>
    <string name="pop">Pop</string>
    <string name="symphonic">Symphonic</string>
    <string name="manele">Manele</string>
    <string name="price">Price</string>
    <string name="_0_ron">0 RON</string>
    <string name="date">Date</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="rating">Rating</string>
    <string name="save">SAVE</string>
    <string name="select_image_from_galery">CHOOSE FROM GALERY</string>
    <string name="make_a_photo_now">MAKE A PHOTO NOW</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms_and_conditions">I agree that I love Android Studio.</string>
    <string name="submit">SUBMIT</string>
    <string name="guns_n_roses">Guns N\' Roses</string>
    <string name="_4_5">4.5</string>
    <string name="_9999_ron">9999 RON</string>
    <string name="los_angeles_california_usa">Los Angeles, California, USA</string>
    <string name="_20_12_1985">20/12/1985</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="info">Info</string>
    <string name="contact">Contact</string>
    <string name="soare_ion_alexandru">Soare Ion-Alexandru</string>
    <string name="soalexandrion1997_gmail_com">soalexandrion1997@gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="contact_email">soalexandrion1997@gmail.com</string>
    <string name="love_android_studio">You MUST love Android Studio in order to continue.</string>
    <string name="nope">You can see, but you can\'t touch!</string>
    <string name="r_u_dumb">Would you please connect to the internet? :)</string>
    <string name="price_to_pay">5$ to see this masterpiece.</string>
    <string name="fuck_android_studio_then">Something went wrong. Delete Android Studio from your PC!</string>
</resources>
