<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeIcon"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/favouritesIcon"
            android:icon="@drawable/ic_favourites"
            android:title="@string/favourites" />
        <item
            android:id="@+id/aboutIcon"
            android:icon="@drawable/ic_info"
            android:title="@string/info" />
        <item
            android:id="@+id/contactIcon"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/shareIcon"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/sendIcon"
                android:icon="@drawable/ic_send"
                android:title="@string/send" />
        </menu>
    </item>
</menu>