<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/lightsteelblue"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageCardView"
            android:layout_width="@dimen/preview_pic_width"
            android:layout_height="@dimen/preview_pic_height"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_pic" />

        <TextView
            android:id="@+id/singerNameCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/guns_n_roses"
            android:textColor="@color/midnightblue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCardView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locationCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/singerNameCardView"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/midnightblue"
            android:textStyle="bold"

            android:text="@string/los_angeles_california_usa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCardView"
            app:layout_constraintTop_toBottomOf="@+id/singerNameCardView" />

        <TextView
            android:id="@+id/dateCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/_20_12_1985"
            android:textSize="12sp"
            android:textColor="@color/midnightblue"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCardView"
            app:layout_constraintTop_toBottomOf="@+id/locationCardView" />

        <TextView
            android:id="@+id/genreCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symphonic"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/priceCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9999_ron"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageCardView"
            android:layout_marginStart="8dp" />

        <RatingBar
            android:id="@+id/ratingCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_5"
            android:numStars="5"
            style = "?android:attr/ratingBarStyleSmall"
            android:progressTint="@color/gold"
            android:stepSize="0.5"
            android:textSize="14sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/genreCardView"
            app:layout_constraintStart_toEndOf="@+id/priceCardView" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>